# clio

./: README.md
clio_core/: Cargo.toml  pyproject.toml
clio_core/src/: device.rs  error.rs  lib.rs
clio_core/src/modules/: activations.rs  linear.rs  mod.rs  seqential.rs
clio_core/src/optimizers/: mod.rs  sgd.rs
clio_core/src/tensor/: ffi.rs  mod.rs
