[package]
name = "clio_core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "clio_core"
crate-type = ["cdylib"]

[dependencies]
tch = "0.14.0"
rayon = "1.8.0"
rand = "0.8.5"
thiserror = "1.0"
pyo3 = { version = "0.21.0", features = ["extension-module"] }
libc = "0.2"

[build-dependencies]
cmake = "0.1"